View Issue Details

IDProjectCategoryView StatusLast Update
0029508Open CASCADEOCCT:Visualizationpublic2018-06-29 21:21
Reporterkgv Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
OSAndroid 
Product Version7.2.0 
Target Version7.3.0Fixed in Version7.3.0 
Summary0029508: Visualization, TKOpenGl - visual artifacts on Adreno 305/308
DescriptionThe visual artifacts occur on the screen of Samsung smartphones having Adreno 305 and Adreno 308 [ASUS ZenFone 4 Max / ZC554KL] (both are limited by OpenGL ES 3.0).
There were no such issues on OCCT 7.1.0.

Note that artifacts are obvious only within Phong shading model; within per-vertex lighting image looks fine.

The problem occurs when Phong program is compiled being marked as "#version 300 es" on these devices.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Attached Files

  • Screenshot_2018-02-14-14-07-47.png (104,463 bytes)
  • Screenshot_2018-02-14-14-08-19.png (146,498 bytes)
  • Screenshot_20180214-184011.png (84,617 bytes)
  • Screenshot_20180214-184030.png (140,682 bytes)

Relationships

related to 0027925 closedbugmaster Visualization - implement order-independent transparency algorithm within rasterization rendering 
related to 0029337 closedapn Visualization, TKOpenGl - visual artifacts on Intel Broadwell GPU 

Activities

kgv

2018-02-14 15:01

developer  

Screenshot_2018-02-14-14-07-47.png (104,463 bytes)

kgv

2018-02-14 15:01

developer  

Screenshot_2018-02-14-14-08-19.png (146,498 bytes)

git

2018-02-14 20:22

administrator   ~0073993

Branch CR29508 has been created by kgv.

SHA-1: ab5461efee4ef431abe03f799f84bfaa6ab6165c


Detailed log of new commits:

Author: kgv
Date: Wed Feb 14 20:18:39 2018 +0300

    0029508: Visualization, TKOpenGl - visual artifacts on Adreno 305/308
    
    OpenGl_ShaderManager now:
    - prefers GLSL ES 100 over GLSL ES 300 on devices reporting OpenGL ES 3.0;
    - prefers GLSL ES 300 on devices reporting OpenGL ES 3.1+.
    to workaround known buggy implementations of OpenGL ES 3.0 drivers.

Author: kgv
Date: Wed Feb 14 16:10:48 2018 +0300

    0029507: Visualization, TKOpenGl - uninitialized class field OpenGl_FrameBuffer::myIsOwnDepth

Author: kgv
Date: Wed Feb 14 00:07:48 2018 +0300

    0029503: Visualization, TKOpenGl - fix access violation due to misprint in OpenGl_AspectMarker
    
    Misprint mySprite->mySpriteA has been corrected.

kgv

2018-02-14 22:00

developer  

Screenshot_20180214-184011.png (84,617 bytes)

kgv

2018-02-14 22:00

developer  

Screenshot_20180214-184030.png (140,682 bytes)

kgv

2018-02-15 09:39

developer   ~0073996

Last edited: 2018-02-15 09:40

Please take the patch.

Tested within branch for 0029509:
http://jenkins-test-10.nnov.opencascade.com/view/CR29509-master-KGV

git

2018-03-06 15:50

administrator   ~0074291

Branch CR29508 has been deleted by kgv.

SHA-1: ab5461efee4ef431abe03f799f84bfaa6ab6165c

Related Changesets

occt: master c5a65111

2018-02-14 17:18:39

kgv


Committer: apn Details Diff
0029508: Visualization, TKOpenGl - visual artifacts on Adreno 305/308

OpenGl_ShaderManager now:
- prefers GLSL ES 100 over GLSL ES 300 on devices reporting OpenGL ES 3.0;
- prefers GLSL ES 300 on devices reporting OpenGL ES 3.1+.
to workaround known buggy implementations of OpenGL ES 3.0 drivers.
Affected Issues
0029508
mod - src/OpenGl/OpenGl_ShaderManager.cxx Diff File

Issue History

Date Modified Username Field Change
2018-02-14 15:01 kgv New Issue
2018-02-14 15:01 kgv Assigned To => kgv
2018-02-14 15:01 kgv File Added: Screenshot_2018-02-14-14-07-47.png
2018-02-14 15:01 kgv File Added: Screenshot_2018-02-14-14-08-19.png
2018-02-14 15:03 kgv Relationship added related to 0027925
2018-02-14 15:03 kgv Relationship added related to 0029337
2018-02-14 15:04 kgv Description Updated
2018-02-14 20:22 git Note Added: 0073993
2018-02-14 20:26 kgv Summary Visualization, TKOpenGl - visual artifacts on Adreno 305 => Visualization, TKOpenGl - visual artifacts on Adreno 305/308
2018-02-14 20:26 kgv Description Updated
2018-02-14 20:26 kgv Steps to Reproduce Updated
2018-02-14 22:00 kgv File Added: Screenshot_20180214-184011.png
2018-02-14 22:00 kgv File Added: Screenshot_20180214-184030.png
2018-02-14 22:02 kgv Description Updated
2018-02-15 09:39 kgv Note Added: 0073996
2018-02-15 09:39 kgv Assigned To kgv => bugmaster
2018-02-15 09:39 kgv Status new => resolved
2018-02-15 09:39 kgv Target Version 7.4.0 => 7.3.0
2018-02-15 09:39 kgv Status resolved => reviewed
2018-02-15 09:40 kgv Note Edited: 0073996
2018-02-15 13:09 apn Test case number => Not needed
2018-02-15 13:09 apn Status reviewed => tested
2018-02-18 13:00 apn Changeset attached => occt master c5a65111
2018-02-18 13:00 apn Assigned To bugmaster => apn
2018-02-18 13:00 apn Status tested => verified
2018-02-18 13:00 apn Resolution open => fixed
2018-03-06 15:50 git Note Added: 0074291
2018-06-29 21:16 aiv Fixed in Version => 7.3.0
2018-06-29 21:21 aiv Status verified => closed